pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: blog
  namespace: blog-universal
  labels:
    name: blog
spec:
  containers:
  - name: web
    image: nginx
    ports:
    - name: web
      containerPort: 80
