service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: blog-universal
spec:
  type: ClusterIP
  selector:
    name: blog
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
